feat:list,card and text box added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="nav-bar">
             <h1>Glitter UI <img src="assets/image/glare.png" width="40px" alt=""></h1>
             <button>&#8801;</button>
-            <a href="#">Home</a>
+            <a href="index.html#docss">Home</a>
             <a href="#">Download</a>
             <a href="#">About</a>
             <span class=" ver1">v0.1.1&nbsp;&nbsp;<i class="ver fa fa-github fa-2x" aria-hidden="true"></i></span>&nbsp;
@@ -28,7 +28,7 @@
         <div class="main-area">
             <section class="side-bar">
                 <ul>
-                    <li>Docs</li>
+                    <li> <a href="index.html#docss">Docs</a></li>
                     <li>Resource</li>
                     <li><a href="#blogs"> Blogs</a></li>
                     <li>Layout</li>
@@ -110,7 +110,38 @@
             <section class="main-menu">
                 <!-- Docs starts -->
 
-                <h1>Introduction</h1>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                <h1 id="docss">Introduction</h1>
                 <p>Glitter UI the simplest and easy to use in one go use just like your own css so lets get started.....
                 </p><br>
                 <h2>Getting Started with Glitter UI</h2>
@@ -663,13 +694,13 @@
                     <!-- button sizes -->
                     <h3>Button in sizes</h3>
                     <!--  button sizes ends-->
-                    <div class="item-container">
-
+                    <div class="button-container">
+                        <button class=" g-button-s">Small</button>
+                        <button class=" g-button-m">Medium</button>
+                        <button class=" g-button-l">Large</button>
+                        <button class=" g-button-xl">X-Large</button>
                     </div>
-                    <button class=" g-button-s">Small</button>
-                    <button class=" g-button-m">Medium</button>
-                    <button class=" g-button-l">Large</button>
-                    <button class=" g-button-xl">X-Large</button>
+
                     <!-- solid button starts -->
                     <h3>Solid Buttons</h3>
                     <div class="item-container">
@@ -689,8 +720,75 @@
                     </div>
                     <!-- outline buttons ends -->
                     <!-- Buttons ends -->
+                    <!-- cards starts  -->
+                    <hr>
+                    <h2>Cards</h2>
+                    <h3 id="vcard">Vertical Cards</h3>
+                    <div class="g-card g-vcard">
+                        <img src="./assets/image/image1.jpg" alt="">
+                        <div>
+                            <span class=""></span>
+                            <h1>Heading</h1>
+                            <p>Lorem ipsum, ectetur omni Lorem ipsu
+                            </p>
+                        </div>
+                        <div>
+                            <h1>Rs . 122</h1>
+                            <span class="old-price">rs .499</span>
+                            <span class="discount"> (50% OFF)</span>
+                        </div>
+                        <button class="g-button-s">add to cart</button>
+                    </div>
+                    <!-- horizontal card -->
+                    <h3 id="hcard">horizontal card</h3>
+                    <br>
 
-                    <!-- Layout ends -->
+                    <div class="item-container">
+                    <div class="g-card g-hcard">
+                        <img src="./assets/image/image1.jpg" alt="">
+                        <div>
+                            <span class=""></span>
+                            <h1>Heading</h1>
+                            <p>Lorem ipsum, ectetur omni Lorem ipsu
+                            </p>
+                            <h1>Rs . 122</h1>
+                            <span class="old-price">rs .499</span>
+                            <span class="discount"> (50% OFF)</span>
+                            <button class="g-button-s">add to cart</button>
+                        </div>
+                    </div>
+                    </div>
+                    <!-- cards ends -->
+                    <!-- input starts  -->
+
+                    <hr>
+                    <br><br>
+                    <h2 id="inputtxt">Text Input</h2>
+                    <br>
+                    <div class="item-container">
+                        <input class="g-input" type="text">
+                    </div>
+                <!-- input ends -->
+                <!-- list starts -->
+                <hr>
+
+<br>
+               <h2>List in Design</h2>
+                    <br>
+                    <h3 id="slist">Simple list</h3>
+                    <ul class="g-list">
+                        <li>item 1</li>
+                        <li>item 2</li>
+                        <li>item 3</li>
+                        <li>item 4</li>
+                        <li>item 5</li>
+                    </ul>
+                    <br>
+                    <br>
+                    <br>
+
+               <!-- list ends -->
+                <!-- Layout ends -->
 
 
 
