feat:component added

--- a/index.html
+++ b/index.html
@@ -139,8 +139,6 @@
 
 
 
-
-
                 <h1 id="docss">Introduction</h1>
                 <p>Glitter UI the simplest and easy to use in one go use just like your own css so lets get started.....
                 </p><br>
@@ -743,21 +741,26 @@
                     <h3 id="hcard">horizontal card</h3>
                     <br>
 
-                    <div class="item-container">
                     <div class="g-card g-hcard">
                         <img src="./assets/image/image1.jpg" alt="">
                         <div>
-                            <span class=""></span>
-                            <h1>Heading</h1>
-                            <p>Lorem ipsum, ectetur omni Lorem ipsu
-                            </p>
-                            <h1>Rs . 122</h1>
-                            <span class="old-price">rs .499</span>
-                            <span class="discount"> (50% OFF)</span>
+                            <div>
+                                <h1>Heading</h1>
+                                <p>Lorem ipsum,Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, doloribus.
+                                    ectetur omni Lorem ipsu
+                                </p>
+                            </div>
+                            <div>
+                                <h1>Rs . 122</h1>
+                                <span class="old-price">rs .499</span>
+                                <span class="discount"> (50% OFF)</span>
+                            </div>
+
                             <button class="g-button-s">add to cart</button>
+
                         </div>
                     </div>
-                    </div>
+
                     <!-- cards ends -->
                     <!-- input starts  -->
 
@@ -768,44 +771,207 @@
                     <div class="item-container">
                         <input class="g-input" type="text">
                     </div>
-                <!-- input ends -->
-                <!-- list starts -->
-                <hr>
+                    <!-- input ends -->
+                    <!-- Navigation starts -->
+                    <hr>
+                    <h2 id="gnavi">Navigation</h2>
+                    <h3>Solid Navigation</h3>
+                    <nav class="g-nav g-solid-nav">
+                        <h1>Company domain</h1>
+                        <ul>
+                            <li><a href="#">Home</a> </li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">About</a></li>
+                        </ul>
+                    </nav>
+                    <h3>Code Snippet</h3>
+                    <div class="code">
+                        &lt;nav class=&quot;g-nav g-solid-nav&quot;&gt;<br>
+                        &lt;h1&gt;Company domain&lt;/h1&gt;<br>
+                        &lt;ul&gt;<br>
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Home&lt;/a&gt; &lt;/li&gt;<br>
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Services&lt;/a&gt;&lt;/li&gt;<br>
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;About&lt;/a&gt;&lt;/li&gt;<br>
+                        &lt;/ul&gt;<br>
+                        &lt;/nav&gt;
+                    </div>
+                    <br>
+                    <br>
+                    <h3>Border Navigation </h3>
+                    <br>
+                    <nav class="g-nav g-border-nav">
+                        <h1>Company domain</h1>
+                        <ul>
+                            <li><a href="#">Home</a> </li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">About</a></li>
+                        </ul>
+                    </nav>
 
-<br>
-               <h2>List in Design</h2>
+                    <h3>Code Snippet</h3>
+                    <div class="code">
+                        &lt;nav class=&quot;g-nav g-border-nav&quot;&gt;<br>
+                        &lt;h1&gt;Company domain&lt;/h1&gt;<br>
+                        &lt;ul&gt;<br>
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Home&lt;/a&gt; &lt;/li&gt;<br>
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Services&lt;/a&gt;&lt;/li&gt;<br>
+                        &lt;li&gt;&lt;a href=&quot;#&quot;&gt;About&lt;/a&gt;&lt;/li&gt;<br>
+                        &lt;/ul&gt;<br>
+                        &lt;/nav&gt;
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <!-- Navigation ends -->
+
+
+                    <!-- Responsive image starts-->
+
+                    <hr>
+                    <br>
+                    <h2>Responsive Image</h2>
+                    <br>
+                    <h3 id="rimg">Responsive Square Image</h3>
+                    <div class="button-container">
+
+                        <div class="image-container">
+                            <img class="g-image" src="/assets/image/image1.jpg" alt="">
+                        </div>
+                        <br>
+
+                    </div>
+                    <h3>Code Snippet</h3>
+                    <div class="code">
+                        &lt;div class=&quot;image-container&quot;&gt;<br>
+                        &lt;img class=&quot;g-image&quot; src=&quot;/assets/image/image1.jpg&quot;
+                        alt=&quot;&quot;&gt;<br>
+                        &lt;/div&gt;<br>
+                    </div>
+                    <div class="button-container">
+                        <div class="image-container">
+                            <img class="g-round-image" src="/assets/image/image1.jpg" alt="">
+                        </div>
+
+                   </div>
+
+                   <h3>Code Snippet</h3>
+                   <div class="code">
+                       &lt;div class=&quot;image-container&quot;&gt;<br>
+                       &lt;img class=&quot;g-round-image&quot; src=&quot;/assets/image/image1.jpg&quot;
+                       alt=&quot;&quot;&gt;<br>
+                       &lt;/div&gt;<br>
+                   </div>
+                    <!-- Responsive imgae ends -->
+
+
+
+                    <!-- list starts -->
+                    <hr>
+
+                    <br>
+                    <h2>List in Design</h2>
                     <br>
                     <h3 id="slist">Simple list</h3>
-                    <ul class="g-list">
-                        <li>item 1</li>
-                        <li>item 2</li>
-                        <li>item 3</li>
-                        <li>item 4</li>
-                        <li>item 5</li>
-                    </ul>
+                    <div class="item-container">
+                        <ul class="g-list">
+                            <li>item 1</li>
+                            <li>item 2</li>
+                            <li>item 3</li>
+                            <li>item 4</li>
+                            <li>item 5</li>
+                        </ul>
+                    </div>
+                    <h3>Code Snippet</h3>
+                    <div class="code">
+                        &lt;ul class=&quot;g-list&quot;&gt;<br>
+                        &lt;li&gt;item 1&lt;/li&gt;<br>
+                        &lt;li&gt;item 2&lt;/li&gt;<br>
+                        &lt;li&gt;item 3&lt;/li&gt;<br>
+                        &lt;li&gt;item 4&lt;/li&gt;<br>
+                        &lt;li&gt;item 5&lt;/li&gt;<br>
+                        &lt;/ul&gt;<br>
+                    </div>
+                    <br>
+                    <br>
+                    <h3 id="clist">Color List</h3>
+                    <div class="item-container">
+                        <ul class="g-list g-list-style1">
+                            <li>item 1</li>
+                            <li>item 2</li>
+                            <li>item 3</li>
+                            <li>item 4</li>
+                            <li>item 5</li>
+                        </ul>
+
+                    </div>
+                    <div class="code">
+                        &lt;ul class=&quot;g-list g-list-style1&quot;&gt;<br>
+                        &lt;li&gt;item 1&lt;/li&gt;<br>
+                        &lt;li&gt;item 2&lt;/li&gt;<br>
+                        &lt;li&gt;item 3&lt;/li&gt;<br>
+                        &lt;li&gt;item 4&lt;/li&gt;<br>
+                        &lt;li&gt;item 5&lt;/li&gt;<br>
+                        &lt;/ul&gt;
+                    </div>
                     <br>
                     <br>
                     <br>
 
-               <!-- list ends -->
-                <!-- Layout ends -->
+                    <!-- list ends -->
+                    <!-- Modal Window starts -->
+                    <hr>
+                    <h2 id="modall">Modal Window</h2>
+                    <div class="button-container">
+                        <div class="g-modal">
+                            <h1>this is heading</h1>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum totam magnam ut
+                                maxime,
+                                doloribus itaque mollitia!</p>
+                            <button class="g-modal-close">
+                                <i class=" fa fa-times fa-2x" aria-hidden="true"></i>
+                            </button>
+                            <div class="modal-button-container">
+                                <button class="g-button-m g-button-primary">follow</button>
+                                <button class="g-button-m g-border-button-primary">save</button>
+                            </div>
+                        </div>
+                    </div>
+                    <h3>Code Snippet</h3>
+                    <div class="code">
+                        &lt;div class=&quot;button-container&quot;&gt;<br>
+                        &lt;div class=&quot;g-modal&quot;&gt;<br>
+                        &lt;h1&gt;this is heading&lt;/h1&gt;<br>
+                        &lt;p&gt;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum totam magnam ut
+                        maxime,<br>
+                        doloribus itaque mollitia!&lt;/p&gt;<br>
+                        &lt;button class=&quot;g-modal-close&quot;&gt;<br>
+                        &lt;i class=&quot; fa fa-times fa-2x&quot; aria-hidden=&quot;true&quot;&gt;&lt;/i&gt;<br>
+                        &lt;/button&gt;<br>
+                        &lt;div class=&quot;modal-button-container&quot;&gt;<br>
+                        &lt;button class=&quot;g-button-m g-button-primary&quot;&gt;follow&lt;/button&gt;<br>
+                        &lt;button class=&quot;g-button-m g-border-button-primary&quot;&gt;save&lt;/button&gt;<br>
+                        &lt;/div&gt;<br>
+                        &lt;/div&gt;<br>
+                    </div>
+                    <!-- modal window ends -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                    <!-- Layout ends -->
             </section>
         </div>
         <!-- body ends -->
